--- a/AUTHORS
+++ b/AUTHORS
@@ -7,4 +7,4 @@ menelkir - menelkir@itroll.org
 Originally based on Arch Green from:
 mrmaire - maire.nunez@gmail.com
 
-Manjaro Logo SVG based on Vulphere's vectorization https://de.wikipedia.org/wiki/Datei:Manjaro_logo_text.svg
+New Tux by lewing@isc.tamu.edu Larry Ewing and The GIMP. New Tux, created using Sodipodi. Based on original image by Larry Ewing, made in GIMP.
